--- a/modificandoHTML1.html
+++ b/modificandoHTML1.html
@@ -13,8 +13,34 @@
     <div id='conteudo1'></div>
     <div id='conteudo2'></div>
     <div id='conteudo3'></div>
+    <div>Sem ID!</div>
 
     <script>
-        // ...
+        // Adicionando elementos com append
+        $('#conteudo1').append('<p>1</p>')
+        // Adicionando elementos com array
+        const elementos = [
+            $('<li></li>').append('Arroz'),
+            $('<li>').append('Feijão'),
+            $('<li>').append('Abobrinha')
+        ]
+
+        // const lista = $('<ul><li>Sorvete</li></ul>').append(elementos)
+        // $('#conteudo2').append(lista)
+        // Prepend: Início da lista
+        const lista = $('<ul><li>Sorvete</li></ul>').prepend(elementos)
+        $('#conteudo2').append(lista)
+        // Conteudo 3
+        // $('#conteudo3').append('<h1>1</h1>')
+        //     .append('<h1>2</h2>').prepend('<h1>0</h1>')
+        $('#conteudo3').append(['<h1>1</h1>', '<h1>2</h1>'])
+            .prepend('<h1>0</h1>')
+        // Modificando com html
+        $('#conteudo3').html('<h1>123</h1>')
+        // Modificando com text
+        $('#conteudo3').text('<h1>123</h1>')
+        // Alterando todos
+        $('div[id]').html('<strong>Todos!</strong>')
+
     </script>
 </body>
